Merge PR #2 into Gradle-based QuickShop-OG